# SemanticSeg

./: .gitignore  README.md  download.py  main.py  pyproject.toml
SegNet/: __init__.py  __main__.py  data.py  model.py  visualise.py
